# image-annotation-gui

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
coco_format_data/: README.md
image_data/: README.md
src/image_annotation_gui/: __about__.py  main.py  transform_to_coco_format.py  utils.py
tests/: __init__.py  test_main.py  test_utils.py
